welcome.lessons.welcome.array.array667.Array667.scala.error
array667:25: error: not found: value nums
indexOfValue(nums ,6)
             ^